--- a/public/index.html
+++ b/public/index.html
@@ -19,12 +19,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter&amp;family=Nunito&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Alkatra:wght@500&family=Inter&family=Merriweather+Sans:wght@500&family=Nunito&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Merriweather+Sans:wght@500&family=Nunito&family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
+
     <link
       rel="Shortcut icon"
       href="https://cdn-icons-png.flaticon.com/512/2798/2798007.png"
